# lighthouse-backend

./: README  pyproject.toml
app/: config.py
app/api/mangadex/: auth.py  mangadex.py
app/api/utils/: env.py
